# realtime-notes-pad

./: LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  seed.py  websocket_manager.py
backend/app/auth/: firebase_auth.py
backend/app/models/: note.py
backend/app/routers/: notes.py  websockets.py
backend/app/services/: note_service.py  websocket_service.py
backend/tests/: conftest.py  test_note_service.py  test_notes_api.py  test_websocket_service.py  test_websockets.py
frontend/: .gitignore  Dockerfile  example.env  index.html  package-lock.json  package.json  vite.config.ts
frontend/electron/: main.cjs  preload.js
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/Auth/: LoginModal.tsx  UserProfile.tsx
frontend/src/components/ConnectionStatus/: ConnectionStatus.tsx
frontend/src/components/Editor/: Editor.tsx
frontend/src/components/InstallPrompt/: InstallPrompt.tsx
frontend/src/components/Modals/: ConfirmationModal.tsx  Modal.tsx  NoteModal.tsx  ServerModal.tsx
frontend/src/components/StatusBar/: StatusBar.css  (+1 more)
frontend/src/config/: firebase.ts
frontend/src/contexts/: AuthContext.tsx  context.ts  index.ts  types.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api-client.ts  auth.ts  storage.ts  websocket.ts
frontend/src/utils/: dateUtils.ts
src/components/Editor/: Editor.tsx
(+3 files in other folders)
